# IRSI

./: ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  INVARIANTS.md  LICENSE  Makefile  OPERATIONS.md  README.md  SECURITY_CHANGES_v12.1.md  SECURITY_CHANGES_v12.2.md  SECURITY_CHANGES_v13.0.md  SECURITY_MODEL.md  adversarial_orchestrator.py  agency_verifier.py  agent.py  attractor_engine.py  audit_sinks.py  auxiliary_indicators.py  axiom_conflict.py  be1_value_model.py  bewaehrungsstrecke.py  calibration.py  carrier_erosion.py  config.py  counter_check.py  deception_surface.py  dgm_bridge.py  dissent_analyzer.py  drift_pressure.py  eval.py  eventsourcing.py  evidence.py  external_integrity.py  gate.py  governance_takt.py  human_coupling.py  human_override.py  invariants.py  llm_client.py  (+66 more)
benchmarks/: README.md
benchmarks/expected_decisions/: 001_benign_proposal.expected.json  002_unsafe_optimization.expected.json  003_deceptive_compliance.expected.json  004_review_bypass.expected.json  005_payload_bloat.expected.json
benchmarks/replay_checks/: README.md
benchmarks/scenarios/: 001_benign_proposal.json  002_unsafe_optimization.json  003_deceptive_compliance.json  004_review_bypass.json  005_payload_bloat.json
dgm/: __init__.py  core.py  evaluators.py  orchestrator.py  path_and_hold.py  stress_tests_dgm.py  truth_anchor.py
docs/: AUDIT_RUNTIME_SPEC.md  AUDIT_SEALING_AND_WORM.md  EVENT_STORE_SPEC.md  EVIDENCE_BUNDLE_SPEC.md  HITL_TWO_FACTOR_REVIEW.md  HUMAN_REVIEW.md  HUMAN_REVIEW_RUNTIME_SPEC.md  OPERATIONS_CHECKLIST.md  PRODUCTION_RUNTIME_GUIDE.md  PUBLICATION_NOTES.md  RED_TEAM_BENCHMARKS.md  RESEARCH_POSITIONING.md  SAFETY_INVARIANTS.md  SEMANTIC_DRIFT_AND_ADVERSARIAL_ORCHESTRATION.md  SHADOW_CALIBRATION_GUIDE.md  SIGNED_EVIDENCE_REVIEW.md  THREAT_MODEL.md  THRESHOLD_REGISTER.md  V10_1_ITERATION_NOTES.md  V10_2_ITERATION_NOTES.md  V10_3_ITERATION_NOTES.md  V10_4_ITERATION_NOTES.md  V10_5_ITERATION_NOTES.md  V10_6_ITERATION_NOTES.md  V11_0_RELEASE_NOTES.md  V11_1_RELEASE_NOTES.md  V11_2_EVENT_PHASE_REFACTOR_PLAN.md  V11_3_SAFE_PHASE_MIGRATION.md  V11_4_SAFETY_DIAGNOSTICS_MIGRATION.md  V11_5_SELF_MODIFICATION_BOUNDARY_MIGRATION.md  V11_6_RUNTIME_OPERATIONS_MIGRATION.md  V12_0_EVENT_SOURCED_RUNTIME.md  V12_1_RESEARCH_PUBLICATION_ADDENDUM.md  good-first-issues.md
docs/philosophical-foundation/: INDEX.md  README.md
llm_fixtures/: LIVE_FIXTURE_README.md  default.json  live_recorded.example.json
pipeline/: execution_plan.py  phase_contexts.py  phase_council.py  phase_flow.py  phase_runtime.py  phase_safety.py  phase_services.py  records.py  runner_core.py  runtime_helpers.py  runtime_operations_phases.py  self_modification_phases.py  stages.py
runtime_config/: threshold_registry.json
scripts/: analyze_shadow_calibration.py  check_phase_event_coverage.py  record_live_fixtures.py  run_all_suites.sh  seal_audit_log.py
tests/: test_executable_suites.py  test_v101_contracts.py  test_v102_contracts.py  test_v103_contracts.py  test_v104_contracts.py  test_v105_contracts.py  test_v106_contracts.py  test_v110_runtime_contracts.py  test_v111_runtime_validation.py  test_v112_phase_runtime.py  test_v113_phase_migration.py  test_v114_safety_diagnostics.py  test_v115_self_modification_boundary.py  test_v116_runtime_operations.py  test_v120_event_sourced_runtime.py  test_v121_architecture_hardening.py  test_v121_payload_bounds.py  test_v121_sprint1_security_hardening.py  test_v122_property_based_security.py  test_v122_quality_hardening.py  test_v123_security_hardening.py  test_v130_integration_runtime.py
